tests/machine/x/pl/cross_join_filter.out
ERROR: /workspace/mochi/tests/machine/x/pl/cross_join_filter.pl:10:11: Syntax error: Operator expected

